# hass-disco

./: Cargo.toml  disco.toml
src/: config.rs  main.rs
