[package]
name = "disco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hass-rs = { git = "https://github.com/carlosmn/hass-rs.git", default-features = false, features = [
    "tokio-runtime",
] }
env_logger = "0.9.0"
log = "0.4.17"
toml = "0.5.9"
lazy_static = "1.4.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
serde_json = "1.0.82"
rand = "0.8.5"
async-tungstenite = { version = "0.13" }
openssl = { version = '0.10', features = ["vendored"] }
serde = { version = "1.0.140" }
clap = { version = "3.2.14", features = ["derive"] }
